--- a/mockup.html
+++ b/mockup.html
@@ -8,158 +8,217 @@
 </head>
 
 <body>
-	<div>
+	<div id="courseSearch">
 		<h1>Course Search</h1>
-		<div>	
+		<div id="searchBar">	
 			<form name="input" action="html_form_action.asp" method="get">
-			<select name="Dept">
-				<option value="COMP">COMP</option>
-			</select>
-			<select name="CNumSel1">
-				<option value="=">=</option>
-				<option value="<"><</option>
-				<option value=">">></option>
-			</select>
-			<input type="CNum" name="CNumField1">
-			<input type="checkbox" name="fit" value="fit">Fit
-			<input type="checkbox" name="more" value="fit">More
-			<input type="submit" value="Submit">
-			<br>
-			<select name="day">
-				<option value="F2013">MWF</option>
-				<option value="S2013">TR</option>
-			</select>
-			<select name="CNumSel2">
-				<option value="=">=</option>
-				<option value="<"><</option>
-				<option value=">">></option>
-			</select>
-			<input type="CNum" name="CNumField2">
-			<select name="GE1">
-				<option value="BN">BN</option>
-			</select>
-			<select name="GE2">
-				<option value="WB">WB</option>
-			</select>
-			<select name="Sem">
-				<option value="F2013">Fall 2013</option>
-				<option value="S2013">Spring 2013</option>
-				<option value="F2012">Fall 2012</option>
-			</select>
+				<select name="Dept">
+					<option value="COMP">COMP</option>
+				</select>
+				<select name="CNumSel1">
+					<option value="=">=</option>
+					<option value="<"><</option>
+					<option value=">">></option>
+				</select>
+				<input type="CNum" name="CNumField1">
+				<input type="checkbox" name="fit" value="fit">Fit
+				<input type="checkbox" name="more" value="fit">More
+				<input type="submit" value="Search">
+				<br>
+				<select name="day">
+					<option value="F2013">MWF</option>
+					<option value="S2013">TR</option>
+				</select>
+				<select name="CNumSel2">
+					<option value="=">=</option>
+					<option value="<"><</option>
+					<option value=">">></option>
+				</select>
+				<input type="CNum" name="CNumField2">
+				<select name="GE1">
+					<option value="BN">BN</option>
+				</select>
+				<select name="GE2">
+					<option value="WB">WB</option>
+				</select>
+				<select name="Sem">
+					<option value="F2013">Fall 2013</option>
+					<option value="S2013">Spring 2013</option>
+					<option value="F2012">Fall 2012</option>
+				</select>
+			</form>
 		</div>
 		<div>
-			<table>
-				<tr>
-					<td>COMP</td>
-					<td>116</td>
-					<td>MWF</td>
-					<td>9:00AM</td>
-					<td>Instructor</td>
-				</tr>
-				<tr>
-					<td>COMP</td>
-					<td>401</td>
-					<td>TR</td>
-					<td>8:00AM</td>
-					<td>Instructor</td>
-				</tr>
-				<tr>
-					<td>COMP</td>
-					<td>410</td>
-					<td>MWF</td>
-					<td>9:00AM</td>
-					<td>Instructor</th>
-				</tr>
+			<table class="courseList">
+				<colgroup>
+					<col class="dept">
+					<col class="cnum">
+					<col class ="day">
+					<col class="ctime">
+					<col class="instructor">
+					<col class="addCourse">
+				</colgroup>
+				<tbody>
+					<tr>
+						<td>COMP</td>
+						<td>116</td>
+						<td>MWF</td>
+						<td>9:00AM - 9:50AM</td>
+						<td>Mayer-Patel</td>
+						<td><input type="submit" value="Add"></td>
+						
+					</tr>
+					<tr>
+						<td>COMP</td>
+						<td>401</td>
+						<td>TR</td>
+						<td>8:00AM - 9:15AM</td>
+						<td>Pozefsky</td>
+						<td><input type="submit" value="Add"></td>
+					</tr>
+					<tr>
+						<td>COMP</td>
+						<td>410</td>
+						<td>MW</td>
+						<td>9:30AM - 10:45AM</td>
+						<td>Jeffay</th>
+						<td><input type="submit" value="Add"></td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 	</div>
-	<div>
+	<div id="myCourses">
 		<h1>My Courses</h1>
 		<div>
-			<table>
-				<tr>
-					<td>COMP</td>
-					<td>116</td>
-					<td>MWF</td>
-					<td>9:00AM</td>
-					<td>Instructor</td>
-				</tr>
+			<table class="courseList">
+				<colgroup>
+					<col class="dept">
+					<col class="cnum">
+					<col class ="day">
+					<col class="ctime">
+					<col class="instructor">
+					<col class="dropCourse">
+				</colgroup>
+				<tbody>
+					<tr>
+						<td>COMP</td>
+						<td>116</td>
+						<td>MWF</td>
+						<td>9:00AM - 9:50AM</td>
+						<td>Stotts</td>
+						<td><input type="submit" value="Add"></td>						
+					</tr>
+				</tbody>
 			</table>
 		</div>
 	</div>
-	<div>
+	<div id="geRequirements">
 		<h1>General Education Requirements</h1>
 		<div>
-			<table>
-				<tr>
-					<td>BN:</td>
-					<td>HS:</td>
-					<td>VP:</td>
-				</tr>
-				<tr>
-					<td>WB:</td>
-					<td>SS:</td>
-					<td>CI:</td>
-				</tr>
-				<tr>
-					<td>GL:</td>
-					<td>FL:</td>
-					<td>EE:</td>
-				</tr>
+			<table id="geTable">
+				<tbody>
+					<tr>
+						<td>BN:</td><td>-----</td>
+						<td>HS:</td><td>-----</td>
+						<td>VP:</td><td>-----</td>
+					</tr>
+					<tr>
+						<td>WB:</td><td>-----</td>
+						<td>SS:</td><td>-----</td>
+						<td>CI:</td><td>-----</td>
+					</tr>
+					<tr>
+						<td>GL:</td><td>-----</td>
+						<td>FL:</td><td>-----</td>
+						<td>EE:</td><td>-----</td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 	</div>
-	<div>
+	<div id="tracker">
 		<h1>Tar Heel Tracker 2.0</h1>
 		<div>
-			<select name="Dept">
-				<option value="COMP">COMP</option>
-			</select>
-			<select name="Type">
-				<option value="Type">BA</option>
-				<option value="Type">BS</option>
-			</select>
-			<select name="GDYr">
-				<option value="GDYr2014">2014</option>
-			</select>
+			<form>
+				<select name="Dept">
+					<option value="COMP">COMP</option>
+					<option value="MATH">MATH</option>
+				</select>
+				<select name="Type">
+					<option value="BA">BA</option>
+					<option value="MINOR">Minor</option>
+					<option value="BS">BS</option>
+					<option value="MS">MS</option>
+				</select>
+				<select name="GDYr">
+					<option value="2014">2014</option>
+				</select>
+			</form>
 		</div>
-		<div>
+		<!-- <div id="awesomeDAG">
 			For Flowchart
-		</div>
+		</div> -->
 		<div>
 			Recommended:
-			<table>
-				<tr>
-					<td>COMP</td>
-					<td>410</td>
-				</tr>
+			<table id="recommendedCourses">
+				<colgroup>
+					<col class="dept">
+					<col class="cnum">
+					<col class="height">
+				</colgroup>
+				<tbody>
+					<tr>
+						<td>COMP</td>
+						<td>401</td>
+						<td>(5)</td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 		<div>
 			Required
-			<table>
-				<tr>
-					<td>COMP</td>
-					<td>410</td>
-				</tr>
-				<tr>
-					<td>COMP</td>
-					<td>411</td>
-				</tr>
+			<table id="requiredCourses">
+				<colgroup>
+					<col class="dept">
+					<col class="cnum">
+					<col class="preqs">
+				</colgroup>
+				<tbody>
+					<tr>
+						<td>COMP</td>
+						<td>410</td>
+						<td>(COMP 401)</td>
+					</tr>
+					<tr>
+						<td>COMP</td>
+						<td>411</td>
+						<td>(COMP 401)</td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 	</div>
-	<div>
+	<div id="courseHistory">
 		<h1>Course History</h1>
-		<table>
-				<tr>
-					<td>COMP</td>
-					<td>101</td>
-					<td>MWF</td>
-					<td>9:00AM</td>
-					<td>Instructor</td>
-				</tr>
-		</table>
+		<div>
+			<table class="courseList">
+				<colgroup>
+					<col class="dept">
+					<col class="cnum">
+					<col class="instructor">
+					<col class="semester">
+				</colgroup>
+				<tbody>
+					<tr>
+						<td>COMP</td>
+						<td>116</td>
+						<td>Stotts</td>
+						<td>S2013</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
  </body>
 </html>
