--- a/mockup.html
+++ b/mockup.html
@@ -19,72 +19,71 @@
 
 <!-- PAGE BODY -->
 <div id="main_content_wrap" class="outer">
-	<div id="main_content" class="inner">
 
-<div id="courseSearch" class="tool">
-	<h2>Course Search</h2>
-	<div id="searchBar">	
-		<form name="input" action="html_form_action.asp" method="get">
-			<select name="Dept">
-				<option value="COMP">COMP</option>
-			</select>
-			<select name="CNumSel1">
-				<option value="=">=</option>
-				<option value="<"><</option>
-				<option value=">">></option>
-			</select>
-			<input type="CNum" name="CNumField1">
-			<input type="checkbox" name="fit" value="fit">Fit
-			<input type="checkbox" name="more" value="fit">More
-			<input type="submit" value="Search">
-			<br>
-			<select name="day">
-				<option value="F2013">MWF</option>
-				<option value="S2013">TR</option>
-			</select>
-			<select name="CNumSel2">
-				<option value="=">=</option>
-				<option value="<"><</option>
-				<option value=">">></option>
-			</select>
-			<input type="CNum" name="CNumField2">
-			<select name="GE1" value="none">
-				<option value="none">--</option>
-				<option value="BN">BN</option>
-				<option value="WB">WB</option>
-				<option value="GL">GL</option>
-				<option value="HS">HS</option>
-				<option value="SS">SS</option>				
-				<option value="FL">FL</option>
-				<option value="VP">VP</option>
-				<option value="QI">QI</option>
-				<option value="EE">EE</option>
-			</select>
-			<select name="GE2" value="none">
-				<option value="none">--</option>
-				<option value="BN">BN</option>
-				<option value="WB">WB</option>
-				<option value="GL">GL</option>
-				<option value="HS">HS</option>
-				<option value="SS">SS</option>				
-				<option value="FL">FL</option>
-				<option value="VP">VP</option>
-				<option value="QI">QI</option>
-				<option value="EE">EE</option>
-			</select>
-			<select name="Sem">
-				<option value="F2013">Fall 2013</option>
-				<option value="S2013">Spring 2013</option>
-				<option value="F2012">Fall 2012</option>
-			</select>
+<div id="courseSearch" class="tool inner">
+	<div class="toolHead"><h2>Course Search</h2></div>
+	<div class="toolBody">	
+		<form class="searchBar" name="input" action="html_form_action.asp" method="get">
+			<div>
+				<input class="submit" type="submit" value="Search">
+				<input type="text" value="Dept" class="dept">
+				<select name="numSel_1">
+					<option value="=">=</option>
+					<option value="<"><</option>
+					<option value=">">></option>
+				</select>
+				<input type="number" name="cNum_1" class="cnum" value="000">
+				<label><input type="checkbox" name="fit" value="fit">Fit</label>
+				<a>Advanced Options</a>
+			</div>
+			<div>
+				<select name="day" value="NONE" >
+					<option value="NONE">Day</option>
+					<option value="MWF">MWF</option>
+					<option value="TR">TR</option>
+				</select>
+				<select name="numSel_2">
+					<option value="=">=</option>
+					<option value="<"><</option>
+					<option value=">">></option>
+				</select>
+				<input type="number" name="cNum_2" class="cnum" value="000">
+				<select name="ge_1" value="NONE">
+					<option value="NONE">GE</option>
+					<option value="BN">BN</option>
+					<option value="WB">WB</option>
+					<option value="GL">GL</option>
+					<option value="HS">HS</option>
+					<option value="SS">SS</option>				
+					<option value="FL">FL</option>
+					<option value="VP">VP</option>
+					<option value="QI">QI</option>
+					<option value="EE">EE</option>
+				</select>
+				<select name="ge_2" value="none">
+					<option value="none">GE</option>
+					<option value="BN">BN</option>
+					<option value="WB">WB</option>
+					<option value="GL">GL</option>
+					<option value="HS">HS</option>
+					<option value="SS">SS</option>				
+					<option value="FL">FL</option>
+					<option value="VP">VP</option>
+					<option value="QI">QI</option>
+					<option value="EE">EE</option>
+				</select>
+				<select name="semester">
+					<option value="F2013">Fall 2013</option>
+					<option value="S2013">Spring 2013</option>
+					<option value="F2012">Fall 2012</option>
+				</select>
+			</div>
 		</form>
-	</div>
-	<div>
 		<table class="courseList">
 			<colgroup>
 				<col class="dept">
 				<col class="cnum">
-				<col class ="day">
+				<col class="day">
 				<col class="ctime">
 				<col class="instructor">
 				<col class="addCourse">
@@ -119,9 +118,9 @@
 		</table>
 	</div>
 </div>
-<div id="myCourses" class="tool">
-	<h2>My Courses</h2>
-	<div>
+<div id="myCourses" class="tool inner">
+	<div class="toolHead"><h2>My Courses</h2></div>
+	<div class="toolBody">
 		<table class="courseList">
 			<colgroup>
 				<col class="dept">
@@ -160,99 +159,103 @@
 		</table>
 	</div>
 </div>
-<div id="geRequirements" class="tool">
-	<h2>General Education Requirements</h2>
-	<div>
+<div id="geRequirements" class="tool inner">
+	<div class="toolHead"><h2>General Education Requirements</h2></div>
+	<div class="toolBody">
 		<table id="geTable">
 			<tbody>
 				<tr>
-					<td>BN:</td><td>-----</td>
-					<td>HS:</td><td>-----</td>
-					<td>VP:</td><td>MUSC 121</td>
+					<td>BN:</td>	<td>-----</td>
+					<td>HS:</td>	<td>-----</td>
+					<td>VP:</td>	<td>MUSC 121</td>
 				</tr>
 				<tr>
-					<td>WB:</td><td>HIST 142</td>
-					<td>SS:</td><td>-----</td>
-					<td>QI:</td><td>-----</td>
+					<td>WB:</td>	<td>HIST 142</td>
+					<td>SS:</td>	<td>-----</td>
+					<td>QI:</td>	<td>-----</td>
 				</tr>
 				<tr>
-					<td>GL:</td><td>-----</td>
-					<td>FL:</td><td>SPAN 203</td>
-					<td>EE:</td><td>COMP 523</td>
+					<td>GL:</td>	<td>-----</td>
+					<td>FL:</td>	<td>SPAN 203</td>
+					<td>EE:</td>	<td>COMP 523</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 </div>
-<div id="tracker" class="tool">
-	<h2>Tar Heel Tracker 2.0</h2>
-	<div>
-		<form>
-			<select name="Dept">
-				<option value="COMP">COMP</option>
-				<option value="MATH">MATH</option>
-			</select>
-			<select name="Type">
-				<option value="BA">BA</option>
-				<option value="MINOR">Minor</option>
-				<option value="BS">BS</option>
-				<option value="MS">MS</option>
-			</select>
-			<select name="GDYr">
-				<option value="2014">2014</option>
-			</select>
-		</form>
-	</div>
-	<!-- <div id="awesomeDAG">
-		For Flowchart
-	</div> -->
-	<div>
-		<table id="recommendedCourses">
-			<caption>Recommended:</caption>
-			<colgroup>
-				<col class="dept">
-				<col class="cnum">
-				<col class="height">
-			</colgroup>
-			<tbody>
-				<tr>
-					<td>COMP</td>
-					<td>401</td>
-					<td>(5)</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-	<div>
-		<table id="requiredCourses">
-			<caption>Required:</caption>
-			<colgroup>
-				<col class="dept">
-				<col class="cnum">
-				<col class="preqs">
-			</colgroup>
-			<tbody>
-				<tr>
-					<td>COMP</td>
-					<td>410</td>
-					<td>(COMP 401)</td>
-				</tr>
-				<tr>
-					<td>COMP</td>
-					<td>411</td>
-					<td>(COMP 401)</td>
-				</tr>
-			</tbody>
-		</table>
+<div id="tracker" class="tool inner">
+	<div class="toolHead"><h2>Tar Heel Tracker 2.0</h2></div>
+	<div class="toolBody">
+		<div>
+			<form>
+				<select class="dept" name="dept">
+					<option value="COMP">COMP</option>
+					<option value="MATH">MATH</option>
+				</select>
+				<select name="Type">
+					<option value="BA">BA</option>
+					<option value="MINOR">Minor</option>
+					<option value="BS">BS</option>
+					<option value="MS">MS</option>
+				</select>
+				<select name="GDYr">
+					<option value="2014">2014</option>
+				</select>
+			</form>
+		</div>
+		<!-- <div id="awesomeDAG">
+			For Flowchart
+		</div> -->
+		<div>
+			<table id="recommendedCourses">
+				<caption>Recommended:</caption>
+				<colgroup>
+					<col class="dept">
+					<col class="cnum">
+					<col class="height">
+				</colgroup>
+				<tbody>
+					<tr>
+						<td>COMP</td>
+						<td>401</td>
+						<td>(5)</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div>
+			<table id="requiredCourses">
+				<caption>Required:</caption>
+				<colgroup>
+					<col class="dept">
+					<col class="cnum">
+					<col class="preqs">
+				</colgroup>
+				<tbody>
+					<tr>
+						<td>COMP</td>
+						<td>410</td>
+						<td>(COMP 401)</td>
+					</tr>
+					<tr>
+						<td>COMP</td>
+						<td>411</td>
+						<td>(COMP 401)</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
-<div id="courseHistory" class="tool">
-	<h2>Course History</h2>
+<div id="courseHistory" class="tool inner">
+	<div class="toolHead"><h2>Course History</h2></div>
 	<div>
 		<table class="courseList">
 			<colgroup>
 				<col class="dept">
 				<col class="cnum">
+				<col class="day">
+				<col class="ctime"
 				<col class="instructor">
 				<col class="semester">
 			</colgroup>
@@ -260,7 +263,17 @@
 				<tr>
 					<td>COMP</td>
 					<td>116</td>
+					<td>MWF</td>
+					<td>9:00AM - 9:50AM</td>
 					<td>Stotts</td>
+					<td>S2013</td>
+				</tr>
+				<tr>
+					<td>COMP</td>
+					<td>116</td>
+					<td>MWF</td>
+					<td>9:00AM - 9:50AM</td>
+					<td>Pozefsky</td>
 					<td>S2013</td>
 				</tr>
 			</tbody>
@@ -268,7 +281,6 @@
 	</div>
 </div>
 	
-	</div>
 </div>
 
 
