fixed html5 validator errors

--- a/mockup.html
+++ b/mockup.html
@@ -33,7 +33,7 @@
 					<option value=">">&gt;</option>
 				</select>
 				<input type="number" name="cNum" class="cnum" value="000">
-				<select name="ge_1" value="NONE">
+				<select name="ge_1">
 					<option value="none">GE</option>
 					<option value="BN">BN</option>
 					<option value="CI">CI</option>
@@ -66,7 +66,7 @@
 					<option value="S2013">S2013</option>
 					<option value="F2012">F2012</option>
 				</select>
-				<select name="ge_2" value="none">
+				<select name="ge_2">
 					<option value="none">GE</option>
 					<option value="BN">BN</option>
 					<option value="CI">CI</option>
@@ -129,7 +129,7 @@
 					<td>410</td>
 					<td>MW</td>
 					<td>9:30AM - 10:45AM</td>
-					<td>Jeffay</th>
+					<td>Jeffay</td>
 					<td><input type="submit" value="Add"></td>
 				</tr>
 			</tbody>
