a bunch of bullshit

--- a/mockup.html
+++ b/mockup.html
@@ -125,7 +125,7 @@
 				<col class="icon">
 			</colgroup>
 			<tbody>
-				<tr>
+				<tr data-section="1">
 					<td>COMP</td>
 					<td>116</td>
 					<td>MWF</td>
@@ -172,40 +172,40 @@
 			</colgroup>
 			<tbody>
 				<tr>
-					<td>QR:</td>	<td>MATH 231</td>
-					<td>LF:</td>	<td>-----</td>
-					<td>FL:</td>	<td>SPAN 203</td>
-					<td>EN:</td>	<td>-----</td>
+					<td name="QR">QR:</td>	<td>MATH 231</td>
+					<td name="LF">LF:</td>	<td>-----</td>
+					<td name="FL">FL:</td>	<td>SPAN 203</td>
+					<td name="EN">EN:</td>	<td>-----</td>
 				</tr>
 				<tr>
-					<td>PL:</td>	<td>CHEM 101</td>
-					<td>PX:</td>	<td>CHEM 101L</td>
-					<td>VP:</td>	<td>-----</td>
-					<td>LA:</td>	<td>-----</td>
+					<td name="PL">PL:</td>	<td>CHEM 101</td>
+					<td name="PX">PX:</td>	<td>CHEM 101L</td>
+					<td name="VP">VP:</td>	<td>-----</td>
+					<td name="LA">LA:</td>	<td>-----</td>
 				</tr>
 				<tr>
-					<td>HS:</td>	<td>-----</td>
-					<td>SS:</td>	<td>ECON 101</td>
-					<td>SS:</td>	<td>-----</td>
-					<td>PH:</td>	<td>PHIL 126</td>
+					<td name="HS">HS:</td>	<td>-----</td>
+					<td name="SS1">SS:</td>	<td>ECON 101</td>
+					<td name="SS2">SS:</td>	<td>-----</td>
+					<td name="PH">PH:</td>	<td>PHIL 126</td>
 				</tr>
 				<tr>
-					<td>CI:</td>	<td>-----</td>
-					<td>US:</td>	<td>-----</td>
-					<td>QI:</td>	<td>MATH 232</td>
-					<td>NA:</td>	<td>-----</td>
+					<td name="CI">CI:</td>	<td>-----</td>
+					<td name="US">US:</td>	<td>-----</td>
+					<td name="QI">QI:</td>	<td>MATH 232</td>
+					<td name="NA">NA:</td>	<td>-----</td>
 				</tr>
 				<tr>
-					<td>WB:</td>	<td>HIST 142</td>
-					<td>GL:</td>	<td>-----</td>
-					<td>BN:</td>	<td>-----</td>
-					<td>EE:</td>	<td>-----</td>
+					<td name="WB">WB:</td>	<td>HIST 142</td>
+					<td name="GL">GL:</td>	<td>-----</td>
+					<td name="BN">BN:</td>	<td>-----</td>
+					<td name="EE">EE:</td>	<td>-----</td>
 				</tr>				
 			</tbody>
 		</table>
 	</div>
 </div>
-<div id="tracker" class="tool inner">
+<div id="tracker" class="tool inner hidden">
 	<div class="toolHead"><h2>Tar Heel Tracker 2.0</h2></div>
 	<div class="toolBody">
 		<div>
