--- a/mockup.html
+++ b/mockup.html
@@ -149,7 +149,7 @@
 		</div>
 	</div>
 </div>
-<div id="courseHistory" class="tool inner">
+<div id="courseHistory" class="tool inner hidden">
 	<div class="toolHead"><h2>Course History</h2></div>
 	<div class="toolBody">
 		<table class="courseList">
