--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<div>
 		<p>Title of our web application: CoursePlanner</p>
 		<p>Description: Using this application, we hope to emulate and improve many aspects shown in the exising ConnectCarolina system. This includes the viewing of avaliable classes, adding these classes into a shopping cart, viewing previous class history, and viewing course requirements for graduation in a desired major.</p>
-		<p>Team Members: Kevin Guo, T. J. Tkacik</p>
-		<p>Our mockup page: <a href="http://tkacik.github.io/COMP426/mockup.html">Mockup</a></p>
+		<p>Team Members: Kevin Guo: 720050250, T. J. Tkacik: 720074165</p>
+		<p>Our mockup page: <a href="http://wwwp.cs.unc.edu/Courses/comp426-f13/tkacik/project/mockup.html">Mockup</a></p>
 		<p>Our design sketches: <a href="photo1.jpg">Sketch 1</a> <a href="photo2.jpg">Sketch 2</a> <a href="photo3.jpg">Sketch 3</a></p>
 		<p>Additional Notes: We will be using GitHub for version control</p>
 	</div>
