--- a/mockup.html
+++ b/mockup.html
@@ -12,6 +12,7 @@
 <!-- PAGE HEADER -->
 <div id="header_wrap" class="outer">
 	<header class="inner">
+	<label id="switchUsers">Switch Users</label>
 	<h1>Course Planner</h1>
 	
 	</header>
